Enhance auth UX and harden API caching

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -201,10 +201,22 @@
     }
   },
   "auth": {
+    "heroLabel": "Premium service",
+    "heroTitle": "Everything for FPV pilots",
+    "heroSubtitle": "Access orders, bonuses and expert support in a single profile.",
+    "heroMeta": "Personal manager 7 days a week",
+    "highlightDelivery": "Express delivery across Russia and EAEU",
+    "highlightSupport": "Technicians ready to help configure your gear",
+    "highlightBonus": "Bonus programme for every purchase",
     "loginTitle": "Sign in / register",
+    "loginSubtitle": "Manage orders, favourites and bonuses in your personal account.",
     "verifyTitle": "Verification",
+    "smsTab": "Phone (SMS)",
+    "passwordTab": "E-mail / phone + password",
     "phoneLabel": "Phone number",
     "phonePlaceholder": "Example +7...",
+    "emailPlaceholder": "email@domain.com",
+    "loginIdentifier": "Login identifier",
     "sendCode": "Send code",
     "loading": "Loading...",
     "debugCode": "Test code",
@@ -212,7 +224,12 @@
     "codePlaceholder": "Enter the code",
     "verify": "Verify",
     "reset": "Change number",
-    "devLink": "Developer login",
+    "passwordLabel": "Password",
+    "passwordPlaceholder": "Enter password",
+    "passwordSubmit": "Sign in",
+    "passwordError": "Invalid login or password",
+    "noAccount": "Don't have an account?",
+    "register": "Register",
     "requestError": "We could not send the code. Try again later.",
     "verifyError": "Incorrect verification code.",
     "unknownError": "Something went wrong. Try again later."
