--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -183,10 +183,22 @@
     }
   },
   "auth": {
+    "heroLabel": "Премиальный сервис",
+    "heroTitle": "Всё для пилотов FPV",
+    "heroSubtitle": "Доступ к заказам, бонусам и экспертной поддержке в одном профиле.",
+    "heroMeta": "Персональный менеджер 7 дней в неделю",
+    "highlightDelivery": "Доставка по России и ЕАЭС за 1‑3 дня",
+    "highlightSupport": "Инженеры помогут настроить и обслужить технику",
+    "highlightBonus": "Бонусы за каждую покупку",
     "loginTitle": "Войти / зарегистрироваться",
+    "loginSubtitle": "Авторизуйтесь, чтобы управлять заказами, избранным и бонусами.",
     "verifyTitle": "Подтверждение",
+    "smsTab": "Телефон (СМС)",
+    "passwordTab": "E-mail / телефон + пароль",
     "phoneLabel": "Номер телефона",
     "phonePlaceholder": "Например +7...",
+    "emailPlaceholder": "email@domain.com",
+    "loginIdentifier": "Идентификатор для входа",
     "sendCode": "Отправить код",
     "loading": "Загрузка...",
     "debugCode": "Тестовый код",
@@ -194,7 +206,12 @@
     "codePlaceholder": "Введите код",
     "verify": "Подтвердить",
     "reset": "Изменить номер",
-    "devLink": "Вход для разработчика",
+    "passwordLabel": "Пароль",
+    "passwordPlaceholder": "Введите пароль",
+    "passwordSubmit": "Войти",
+    "passwordError": "Неверные данные для входа",
+    "noAccount": "Нет аккаунта?",
+    "register": "Регистрация",
     "requestError": "Не удалось отправить код. Попробуйте позже.",
     "verifyError": "Неверный код подтверждения.",
     "unknownError": "Что-то пошло не так. Попробуйте позже."
